syntax = "proto3";
package mapi_grpc_example.api.v1;
option go_package = ".";

// All request must include a 'source' value exactly equal to
// 'valid-source', otherwise the request will be dropped.

// A simple calculator service
service UserService {
  rpc AddUser (AddUserRequest) returns (UserResult) {}
  rpc GetUsers (GetUsersRequest) returns (UsersResult) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResult) {}
  rpc CheckReservedName (CheckReservedNameRequest) returns (CheckReservedNameResult) {}
}

// Add a new user to the database
message AddUserRequest {
  string username = 1;
  string email = 2;
}

// Get a collection of users with the given filter
message GetUsersRequest {
  string filter = 1;
  string source = 2;
}

// Delete a user by ID
message DeleteUserRequest {
  int64 id = 1;
}

// Check to see if a name is reserved
message CheckReservedNameRequest {
  string name = 1;
  string source = 2;
}

// A user record
message UserResult {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string created = 4;
}

// A collection of user records
message UsersResult {
  repeated UserResult users = 1;
}

// Result from a deleted user
message DeleteUserResult {
  // Number of deleted users
  int64 count = 1;
}

// Returns reserved names matching the query
message CheckReservedNameResult {
  string reserved = 1;
}